--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,11 @@
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
         <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
         #{get 'moreScripts' /}
+		<ul id="tools">
+    <li>
+        <a href="@{Admin.index()}">Log in to write something</a>
+    </li>
+</ul>
     </head>
     <body>
         #{doLayout /}
