--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -15,7 +15,7 @@
         
         <div id="header">
             <div id="logo">
-                yabe. <span>administration</span>
+                ITMO  <span>administration</span>
             </div>
             <ul id="tools">
                 <li>
@@ -29,9 +29,7 @@
         </div>
         
         <p id="footer">
-            Yabe is a (not so) powerful blog engine built with the 
-            <a href="http://www.playframework.org">Play framework</a>
-            as a tutorial application.
+          
         </p>
         
     </body>
