--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -1,36 +1,36 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Administration</title>		
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-        #{get 'moreStyles' /}	
-        <link rel="stylesheet" type="text/css" media="screen" 
-                href="@{'/public/stylesheets/main.css'}" />
-        <link rel="shortcut icon" type="image/png" 
-                href="@{'/public/images/favicon.png'}" />
-        <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"></script>
-        <script src="@{'/public/javascripts/jquery.tools-1.2.5.toolbox.expose.min.js'}"></script>
-    </head>
-    <body id="admin">
-        
-        <div id="header">
-            <div id="logo">
-                ITMO  <span>administration</span>
-            </div>
-            <ul id="tools">
-                <li>
-                    <a href="@{Secure.logout()}">Log out</a>
-                </li>
-            </ul>
+
+<head>
+    <title>Administration</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />#{get 'moreStyles' /}
+    <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}" />
+    <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}" />
+    <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"></script>
+    <script src="@{'/public/javascripts/jquery.tools-1.2.5.toolbox.expose.min.js'}"></script>
+</head>
+
+<body id="admin">
+
+    <div id="header">
+        <div id="logo">
+            ITMO <span>administration</span>
         </div>
-        
-        <div id="main">
-            #{doLayout /} 
-        </div>
-        
-        <p id="footer">
-          
-        </p>
-        
-    </body>
+        <ul id="tools">
+            <li>
+                <a href="@{Secure.logout()}">Log out</a>
+            </li>
+        </ul>
+    </div>
+
+    <div id="main">
+        #{doLayout /}
+    </div>
+
+    <p id="footer">
+
+    </p>
+
+</body>
+
 </html>
